[package]
name = "synddb-shared"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
# Ethereum types and URL parsing
alloy = { workspace = true, features = ["signers", "signer-local"] }
url = { workspace = true }

# Serialization for shared types
serde = { workspace = true }
serde_json = { workspace = true }
base64 = { workspace = true }
hex = { workspace = true }

# CBOR/COSE serialization
ciborium = { workspace = true }
coset = { workspace = true }
serde_bytes = { workspace = true }
sha2 = { workspace = true }
zstd = { workspace = true }

# Cryptography (signature verification)
k256 = { workspace = true, features = ["ecdsa"] }
sha3 = { workspace = true }

# Logging and signal handling (for runtime utilities)
tracing-subscriber = { workspace = true, features = ["env-filter", "json"] }
tokio = { workspace = true, features = ["signal"] }

# Error handling
thiserror = { workspace = true }

[dev-dependencies]
# For signing in tests
alloy = { workspace = true, features = ["signers", "signer-local"] }
tokio = { workspace = true, features = ["rt", "macros"] }
