[package]
name = "synddb-storage"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Storage abstraction for SyndDB (GCS, with future support for other backends)"

[lints]
workspace = true

[dependencies]
# Google Cloud Storage
google-cloud-storage = { workspace = true }
google-cloud-auth = { workspace = true }

# HTTP client for emulator REST API fallback
reqwest = { workspace = true }
percent-encoding = "2"

# Serialization (for emulator JSON responses)
serde_json = { workspace = true }

# Bytes handling
bytes = "1"

# Error handling
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }

# Re-export GcsConfig from synddb-shared
synddb-shared = { path = "../synddb-shared" }
