[package]
name = "synddb-validator"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[package.metadata.cargo-machete]
ignored = ["humantime-serde"] # used in serde annotations

[lints]
workspace = true

[dependencies]
# Workspace crates
synddb-shared = { path = "../synddb-shared" }

# Core async and CLI
tokio = { workspace = true, features = ["full"] }
clap = { workspace = true, features = ["derive", "env"] }
anyhow = { workspace = true }
thiserror = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
ciborium = { workspace = true }

# Configuration
humantime-serde = { workspace = true }
humantime = { workspace = true }

# Logging and tracing
tracing = { workspace = true }

# HTTP server
axum = { workspace = true }

# Cryptography (signature verification)
alloy = { workspace = true, features = ["signers", "signer-local"] }
hex = { workspace = true }

# Database
rusqlite = { workspace = true, features = ["bundled", "backup", "session"] }
fallible-streaming-iterator = "0.1"

# Compression
zstd = { workspace = true }

# Utilities
async-trait = { workspace = true }
strum = { workspace = true }

# HTTP client (for HttpFetcher)
reqwest = { workspace = true }

# Google Cloud Storage
google-cloud-storage = { workspace = true }

[dev-dependencies]
tower = { workspace = true, features = ["util"] }
k256 = { workspace = true }
