[package]
name = "synddb-wal-sequencer"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
thiserror = { workspace = true }
zerocopy = { version = "0.8", features = ["derive"] }


[dev-dependencies]
rusqlite = { workspace = true, features = ["bundled", "session", "hooks"] }
