[package]
name = "prediction-market"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[lib]
name = "prediction_market"
path = "src/lib.rs"

[[bin]]
name = "prediction-market"
path = "src/main.rs"

[dependencies]
tokio = { workspace = true }
rusqlite = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
synddb-client = { path = "../../crates/synddb-client" }
