[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "price-oracle"
version = "0.1.0"
description = "Price oracle example demonstrating multi-source price aggregation with Bridge integration"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "httpx>=0.26.0",
    "click>=8.1.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "eth-hash[pycryptodome]>=0.5.0",
    "eth-abi>=5.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "jsonschema>=4.20.0",
]

[project.scripts]
price-oracle = "price_oracle.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/price_oracle"]
