[package]
name = "proof-service"
version = "0.1.0"
edition = "2021"
description = "GPU-accelerated SP1 proof generation service for TEE attestation"
publish = false

# Standalone service, not part of main workspace
[workspace]

[dependencies]
# Web framework
axum = { version = "0.8", features = ["json"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
hex = "0.4"

# SP1 SDK for proof generation
sp1-sdk = "5.0"

# GCP attestation verification (for JWKS fetching)
gcp-confidential-space = { path = "../../crates/gcp-confidential-space", features = [
  "sp1",
] }

# Solidity types
alloy = { version = "1.0", default-features = false, features = ["sol-types"] }

# CLI and configuration
clap = { version = "4", features = ["derive", "env"] }

# Error handling
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# HTTP client for JWKS fetching
reqwest = { version = "0.12", features = ["json"] }

# Binary serialization for proofs
bincode = "1.3"

[build-dependencies]
sp1-build = "5.0"
