[package]
name = "proof-service"
version = "0.1.0"
edition = "2021"
description = "RISC Zero GPU proof generation service for TEE attestation"
publish = false

# Standalone service, not part of main workspace
[workspace]

[[bin]]
name = "proof-service"
path = "src/main.rs"

[features]
default = []
# Enable CUDA GPU acceleration for RISC Zero proving
cuda = ["risc0-zkvm/cuda"]
# Enable Metal GPU acceleration (macOS)
metal = ["risc0-zkvm/metal"]

[dependencies]
# Web framework
axum = { version = "0.8", features = ["json"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
hex = "0.4"

# RISC Zero SDK for local GPU proof generation
#
# Unlike SP1 which requires Docker-in-Docker for GPU proving, RISC Zero compiles
# to a native CUDA binary that works directly on Cloud Run with L4 GPUs.
#
# Features:
# - Default: CPU proving (slower but portable)
# - cuda: Enable NVIDIA GPU acceleration (use for production)
# - metal: Enable Apple GPU acceleration (for local dev on Mac)
risc0-zkvm = { version = "3.0", features = ["prove"] }

# GCP attestation verification (for JWKS fetching and JWT parsing)
gcp-attestation = { path = "../../crates/gcp-attestation" }

# RISC Zero program types (PublicValuesStruct for decoding proof outputs)
gcp-cs-attestation-risc0-program = { path = "../../crates/synddb-bootstrap/risc0/program", default-features = false }

# Solidity types
alloy = { version = "1.0", default-features = false, features = ["sol-types"] }

# CLI and configuration
clap = { version = "4", features = ["derive", "env"] }

# Error handling
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# HTTP client for JWKS fetching
reqwest = { version = "0.12", features = ["json"] }

[build-dependencies]
risc0-build = "3.0"

[package.metadata.risc0]
methods = ["../../crates/synddb-bootstrap/risc0/program"]
