[package]
name = "cs-attestation-sample"
version = "0.1.0"
edition = "2021"
description = "Captures attestation tokens from GCP Confidential Space for SP1 verification development"
publish = false

# This is a standalone test workload, not part of the main workspace
[workspace]

[dependencies]
# Async runtime
tokio = { version = "1.41", features = ["rt-multi-thread", "macros"] }

# HTTP client for JWKS fetch
reqwest = { version = "0.12", features = ["json"] }

# Unix domain socket for attestation service
hyperlocal = "0.8"
hyper = { version = "0.14", features = ["client", "http1"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Base64 decoding for JWT
base64 = "0.22"

# Hex encoding for signature bytes
hex = "0.4"

# Error handling
anyhow = "1.0"

# System calls for diagnostics
libc = "0.2"

# Time formatting
chrono = { version = "0.4", default-features = false, features = [
  "std",
  "clock",
] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Google Cloud Storage (optional, for uploading samples)
google-cloud-storage = { version = "0.22", optional = true }

# RSA signature verification
rsa = { version = "0.9", features = ["sha2"] }
sha2 = { version = "0.10", features = ["oid"] }

[features]
default = []
gcs = ["google-cloud-storage"]

[[bin]]
name = "cs-attestation-sample"
path = "src/main.rs"

[[bin]]
name = "verify-sample"
path = "src/verify.rs"
