[package]
name = "gcp-confidential-space"
version = "0.1.0"
edition = "2021"
description = "GCP Confidential Space attestation verification library"
publish = false

# Standalone crate, not part of main SyndDB workspace (uses different alloy version for SP1)
[workspace]

[features]
default = ["std"]
std = ["serde/std", "serde_json/std", "rsa/std", "sha2/std"]
# Enable SP1-specific types (PublicValuesStruct with alloy sol! macro)
sp1 = ["alloy"]

[dependencies]
# RSA signature verification
rsa = { version = "0.9", default-features = false, features = ["sha2"] }
sha2 = { version = "0.10", default-features = false, features = ["oid"] }

# Serialization for JWT claims
serde = { version = "1.0", default-features = false, features = [
  "derive",
  "alloc",
] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }

# Solidity types for PublicValuesStruct (optional, for SP1)
alloy = { version = "1.0", default-features = false, features = [
  "sol-types",
], optional = true }