[package]
name = "gcp-confidential-space"
version = "0.1.0"
edition = "2021"
description = "GCP Confidential Space attestation verification library with SP1 support"
publish = false

# Standalone crate, not part of main SyndDB workspace (uses different alloy version for SP1)
[workspace]

[features]
default = ["std"]
std = ["gcp-attestation/std"]
# Enable SP1-specific types (PublicValuesStruct with alloy sol! macro)
sp1 = ["alloy"]

[dependencies]
# Core attestation verification (shared with sequencer)
gcp-attestation = { path = "../../../crates/gcp-attestation", default-features = false }

# Solidity types for PublicValuesStruct (optional, for SP1)
alloy = { version = "1.0", default-features = false, features = [
  "sol-types",
], optional = true }
