[package]
name = "synddb-e2e"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "End-to-end test runner for SyndDB"

[[bin]]
name = "synddb-e2e"
path = "src/main.rs"

[dependencies]
tokio = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true, features = ["env"] }
url = { workspace = true }
synddb-shared = { path = "../../../crates/synddb-shared" }

[lints]
workspace = true
