[package]
name = "synddb-e2e"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "End-to-end test runner for SyndDB"

[[bin]]
name = "synddb-e2e"
path = "src/main.rs"

[[test]]
name = "e2e"
path = "tests/e2e.rs"

[dependencies]
tokio = { workspace = true }
reqwest = { workspace = true, features = ["json"] }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true, features = ["env"] }
url = { workspace = true }
base64 = { workspace = true }
synddb-shared = { path = "../../../crates/synddb-shared" }

[dev-dependencies]
anyhow = { workspace = true }

[lints]
workspace = true
