[package]
name = "gcp-cs-attestation-sp1-program"
version = "0.1.0"
edition = "2021"
publish = false

# Standalone crate (uses alloy 1.0 for SP1 compatibility, workspace uses 1.1)
[workspace]

[lib]
path = "src/lib.rs"

[[bin]]
name = "gcp-cs-attestation-sp1-program"
path = "src/main.rs"

[features]
default = ["zkvm"]
# Enable std for use outside zkVM (e.g., proof-service decoding outputs)
std = []
# Enable zkVM dependencies (disabled when used as a library)
zkvm = ["sp1-zkvm", "gcp-attestation"]

[dependencies]
# Solidity types for PublicValuesStruct
alloy = { version = "1.0", default-features = false, features = ["sol-types"] }

# zkVM runtime (only needed when building the SP1 program binary)
sp1-zkvm = { version = "5.2", optional = true }

# Attestation verification (only needed when building the SP1 program binary)
gcp-attestation = { path = "../../../gcp-attestation", default-features = false, optional = true }
