[package]
name = "gcp-cs-attestation-risc0-script"
version = "0.1.0"
edition = "2021"
publish = false

[workspace]

[[bin]]
name = "risc0-prover"
path = "src/main.rs"

[dependencies]
alloy = { version = "1.0", features = ["sol-types"] }
clap = { version = "4.5", features = ["derive"] }
# GCP attestation verification
gcp-attestation = { path = "../../../../crates/gcp-attestation" }
# RISC Zero program types (PublicValuesStruct for decoding proof outputs)
gcp-cs-attestation-risc0-program = { path = "../../../../crates/synddb-bootstrap/risc0/program", default-features = false }
hex = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
risc0-zkvm = { version = "3.0.4", features = ["prove"] }

[build-dependencies]
risc0-build = "3.0.4"

[package.metadata.risc0]
methods = ["../../../../crates/synddb-bootstrap/risc0/program"]
